tdf#156854 invert alpha mask for macOS native menu item images

At the time of this change, only the AquaSalMenu class calls this
function so it should be safe to invert the alpha mask here.

Change-Id: Id67ad0f453bbf88b43d37087eef36a27ced3ad37
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155977
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@neooffice.org>